kubernetes/overlays/prod/overlays/askem-staging/ingress/private-web-grpc-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private-web-grpc-ingress
  annotations:
    alb.ingress.kubernetes.io/backend-protocol-version: GRPC
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  ingressClassName: alb
  rules:
    - host: "spicedb.staging.terarium.ai"
      http:
        paths:
          - backend:
              service:
                name: spicedb-grpc
                port:
                  number: 50051
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "spicedb.staging.terarium.ai"
