kubernetes/overlays/prod/overlays/askem-staging/ingress/private-web-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private-web-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/security-groups: askem-staging-web-private
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: "documentation.staging.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: terarium-docs
                port:
                  number: 8000

    - host: "data-service.staging.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: data-service
                port:
                  number: 3020

    - host: "message-queue.staging.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: message-queue
                port:
                  number: 5672

    - host: "mit-proxy.staging.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mit-proxy
                port:
                  number: 3981

    - host: "hmi-extraction-service.staging.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hmi-extraction-service
                port:
                  number: 5000

    - host: "model-service.staging.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: model-service
                port:
                  number: 3010

    - host: "simulation-service.staging.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simulation-service
                port:
                  number: 3030

    - host: "skema-py.staging.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skema-py
                port:
                  number: 4041

    - host: "skema-rs.staging.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skema-rs
                port:
                  number: 4040

    - host: "jupyter-llm.staging.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jupyter-llm
                port:
                  number: 8889


  tls:
    - hosts:
        - "documentation.staging.terarium.ai"
        - "data-service.staging.terarium.ai"
        - "message-queue.staging.terarium.ai"
        - "mit-proxy.staging.terarium.ai"
        - "hmi-extraction-service.staging.terarium.ai"
        - "model-service.staging.terarium.ai"
        - "simulation-service.staging.terarium.ai"
        - "skema-py.staging.terarium.ai"
        - "skema-rs.staging.terarium.ai"
        - "jupyter-llm.staging.terarium.ai"
