kubernetes/overlays/prod/overlays/askem-staging/ingress/private-web-ssl-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private-web-ssl-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/security-groups: askem-staging-web-private
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '443'
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: alb
  rules:
    - host: "app.staging.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-envoy
                port:
                  number: 8078

    - host: "keycloak.staging.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-keycloak
                port:
                  number: 443

  tls:
    - hosts:
        - "app.staging.terarium.ai"
        - "keycloak.staging.terarium.ai"
