kubernetes/overlays/prod/overlays/askem-staging/ingress/spicedb-grpc-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol-version: GRPC
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
  labels:
    app: spicegrpc
    environment: staging
  name: spicegrpc
  namespace: terarium
spec:
  ingressClassName: alb
  rules:
  - host: spicegrpc.staging.terarium.ai
    http:
      paths:
      - backend:
          service:
            name: spicegrpc
            port:
              number: 50051
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - "spicegrpc.staging.terarium.ai"
